Bug 1944191 - Make `PresShell::EventHandler::DispatchEvent` retarget `mousemove` event if preceding boundary events removed the target r=smaug

Chrome dispatches `mousemove` event on the preceding `mouseover` target even if
the target is removed from the DOM tree.  However, once the
"Boundary Event Dispatch Tracks Node Removal" feature is enabled, Chrome Canary
dispatches `mousemove` on the last deepest `mouseenter` event target which is
still connected.  Therefore, we should follow their new behavior if it's simply
possible.

Note that if `pointeover` target is removed, Chrome does not dispatch
`pointermove` on the last deepest `pointerenter` target. Therefore, this patch
limits the behavior change only for `eMouseMove`.

Differential Revision: https://phabricator.services.mozilla.com/D235807